--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,23 @@ body {
   img {
     width: clamp(45px, 6vw, 75px);
   }
+  animation: movingLogo 10s infinite linear;
+}
+
+@keyframes movingLogo {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(25px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.header__logo:hover {
+  animation-play-state: paused;
 }
 
 .header__day {
