--- a/scss/main.css
+++ b/scss/main.css
@@ -114,6 +114,7 @@ body {
   background-color: rgb(88, 184, 239);
   color: white;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 .header {
@@ -172,7 +173,7 @@ body {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 20px;
-  padding: 10px;
+  padding: 100px 25px 25px;
 }
 @media (max-width: 900px) {
   .wrapper {
@@ -180,6 +181,7 @@ body {
     right: 25px;
     bottom: 50px;
     left: 25px;
+    padding: 0 25px 0;
   }
 }
 
@@ -241,14 +243,16 @@ body {
 
 .weather-container {
   width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .weather-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
     text-align: center;
+    overflow-y: scroll;
   }
 }
 
@@ -256,7 +260,7 @@ body {
   display: none !important;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .weather {
     width: 100%;
   }
@@ -287,7 +291,6 @@ body {
 }
 
 .details {
-  margin-top: 50px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -366,16 +369,20 @@ body {
   }
 }
 
-.footer p {
-  font-weight: 300;
+.copyright {
+  font-size: clamp(12px, 2vw, 16px);
 }
 
 .creator {
+  font-size: clamp(12px, 2vw, 16px);
+}
+
+.creator a {
   position: relative;
   color: white;
 }
 
-.creator::after {
+.creator a::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -388,7 +395,65 @@ body {
   transition: transform 0.3s ease-out;
 }
 
-.creator:hover::after {
+.creator a:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.five-days-weather {
+  width: 30%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  background-color: rgba(255, 255, 255, 0.189);
+  border-radius: 15px;
+  padding: 25px;
+}
+@media (max-width: 900px) {
+  .five-days-weather {
+    width: 100%;
+  }
+}
+
+.days-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  width: 100%;
+}
+
+.days-container img:nth-child(2) {
+  justify-self: center;
+}
+
+.days-container p:nth-child(3) {
+  justify-self: flex-end;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.twenty4-hours-weather {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  -moz-column-gap: 25px;
+       column-gap: 25px;
+  overflow-x: scroll;
+}
+
+.weather-container-data {
+  height: 100%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+@media (max-width: 900px) {
+  .weather-container-data {
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
