--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,19 +1,15 @@
 @import "reset";
+@import "form";
+@import "suggest";
+@import "header";
+@import "weather-main";
+@import "weather-daily";
+@import "weather-hourly";
+@import "weather-info";
+@import "footer";
+@import "variables";
+@import "mixins";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-// VARIABLES
-$bgColor: rgb(88, 184, 239);
-$dynamicHeight: 100dvh;
-$mobile: 600px;
-$tablet: 900px;
-$basicFont: "Montserrat", sans-serif;
-
-// MIXIN
-@mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 body {
     position: relative;
@@ -25,133 +21,35 @@ body {
     overflow: hidden;
 }
 
-// HEADER
-
-.header {
-    position: absolute;
-    top: 0;
-    right: 50px;
-    left: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100px;
-    @media (max-width: $tablet) {
-        right: 25px;
-        left: 25px;
-        min-height: 50px;
-    }
-}
-
-.header__logo {
-    img {
-        width: clamp(45px, 6vw, 75px);
-    }
-    animation: movingLogo 10s infinite linear;
-}
-
-@keyframes movingLogo {
-    0% {
-        transform: translateX(0);
-    }
-    50% {
-        transform: translateX(25px);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-
-.header__logo:hover {
-    animation-play-state: paused;
-}
-
-.header__day {
-    font: {
-        size: clamp(18px, 3vw, 30px);
-        weight: 500;
-    }
-}
-
-// MAIN
 .wrapper {
     position: absolute;
-    top: 100px;
-    right: 50px;
-    bottom: 100px;
-    left: 50px;
+    top: 80px;
+    right: 20px;
+    bottom: 50px;
+    left: 20px;
     @include flex-center();
     background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    padding: 100px 25px 25px;
+    border-radius: 10px;
+    padding: 60px 10px 10px;
     @media (max-width: $tablet) {
         top: 50px;
-        right: 25px;
+        right: 10px;
         bottom: 50px;
-        left: 25px;
-        padding: 0 25px 0;
+        left: 10px;
+        padding: 0 10px 0;
     }
 }
-
-.form {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    @include flex-center();
-    width: 300px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.1);
-    @media (max-width: $mobile) {
-        width: calc(100% - 20px);
-    }
-    transition: background-color 0.3s;
-}
-
-.form:focus-within {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.form__input {
-    width: calc(100% - 40px);
-    padding: 0 10px;
-}
-
-::placeholder {
-    color: white;
-    opacity: 0.5;
-}
-
-.form__btn {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    transition: background-color 0.3s;
-}
-
-.form__btn:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-//
-.suggest {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-//
 
 .weather-container {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    column-gap: 10px;
+    overflow-y: scroll;
     @media (max-width: $tablet) {
         flex-direction: column;
-        text-align: center;
-        overflow-y: scroll;
+        padding: 60px 0 10px;
+        row-gap: 10px;
     }
 }
 
@@ -159,207 +57,26 @@ body {
     display: none !important;
 }
 
-.weather {
-    @media (max-width: $tablet) {
-        width: 100%;
-    }
-}
-
-.weather__temp {
-    font: {
-        size: clamp(50px, 8vw, 72px);
-        weight: 600;
-    }
-}
-
-.weather__city {
-    font: {
-        size: clamp(30px, 5vw, 50px);
-        weight: 500;
-    }
-}
-
-.weather__type {
-    font: {
-        size: clamp(20px, 3vw, 40px);
-        weight: 100;
-    }
-}
-
-.weather-img {
-    width: clamp(150px, 20vw, 250px);
-    @media (max-width: $mobile) {
-        margin: auto;
-    }
-}
-
-.details {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    //
-    column-gap: 50px;
-    //
-}
-
-.details {
-    i {
-        font-size: clamp(35px, 6vw, 50px);
-    }
-}
-.details__humidity,
-.details__speed {
-    display: flex;
-    column-gap: 10px;
-}
-
-.humidity,
-.speed {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: start;
-    @media screen and (max-width: $mobile) {
-        justify-content: space-between;
-    }
-}
-
-.humidity__title,
-.speed__title {
-    font-weight: 100;
-}
-
-// SUGGEST CITY
-
-.suggest__title {
-    font: {
-        size: 24px;
-        weight: 600;
-    }
-    margin-bottom: 10px;
-}
-
-.grid-container {
-    input {
-        font: {
-            size: 18px;
-            weight: 400;
-        }
-    }
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    column-gap: 50px;
-    row-gap: 10px;
-    // @media screen and (max-width: $tablet) {
-    //   grid-template-columns: repeat(2, auto);
-    // }
-    @media screen and (max-width: $mobile) {
-        grid-template-columns: repeat(1, auto);
-    }
-}
-
-// FOOTER
-
-.footer {
-    position: absolute;
-    right: 50px;
-    bottom: 0;
-    left: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    @media (max-width: $tablet) {
-        height: 50px;
-        right: 25px;
-        left: 25px;
-    }
-}
-
-.copyright {
-    font-size: clamp(12px, 2vw, 16px);
-}
-
-.creator {
-    font-size: clamp(12px, 2vw, 16px);
-}
-
-.creator a {
-    position: relative;
-    color: white;
-}
-
-.creator a::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: white;
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    transition: transform 0.3s ease-out;
-}
-
-.creator a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-.five-days-weather {
-    width: 30%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    background-color: rgba(255, 255, 255, 0.189);
-    border-radius: 15px;
-    padding: 25px;
-    @media (max-width: $tablet) {
-        width: 100%;
-    }
-}
-
-.days-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    // place-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.days-container img:nth-child(2) {
-    justify-self: center;
-}
-
-.days-container p:nth-child(3) {
-    justify-self: flex-end;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-.twenty4-hours-weather {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    // justify-content: center;
-    // align-items: center;
-    column-gap: 25px;
-    overflow-x: scroll;
-}
-
-.weather-container-data {
+.left-section {
     height: 100%;
     width: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-
+    row-gap: 10px;
     @media (max-width: $tablet) {
         width: 100%;
+        min-height: min-content;
+    }
+}
+
+.right-section {
+    height: 100%;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    @media (max-width: $tablet) {
+        width: 100%;
+        min-height: min-content;
     }
 }
