--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,9 @@
 // VARIABLES
-$bgColor: rgb(88, 184, 239);
 $dynamicHeight: 100dvh;
 $mobile: 600px;
 $tablet: 900px;
 $basicFont: "Montserrat", sans-serif;
+
+:root {
+    --bg-color: rgb(88, 184, 239);
+}
