--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -5,6 +5,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    z-index: 1;
     @include flex-center();
     width: 300px;
     height: 40px;
