--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,14 +19,16 @@
 .header__logo {
     display: flex;
     justify-content: center;
-    align-items: center;
-    column-gap: 10px;
+    align-items: flex-end;
     img {
         width: clamp(45px, 6vw, 65px);
         animation: movingLogo 10s infinite linear;
     }
     p {
         font-size: clamp(24px, 4vw, 30px);
+        //
+        line-height: 100%;
+        //
         color: white;
     }
 }
@@ -36,7 +38,7 @@
         transform: translateX(0);
     }
     50% {
-        transform: translateX(25px);
+        transform: translateX(10px);
     }
     100% {
         transform: translateX(0);
