--- a/scss/_weather-main.scss
+++ b/scss/_weather-main.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     padding: 10px;
     border-radius: 10px;
     @media (max-width: $tablet) {
