--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,10 +15,34 @@ body {
     position: relative;
     min-height: $dynamicHeight;
     width: 100%;
-    background-color: var(--bg-color);
+    background: var(--bg-color);
     color: white;
     font-family: $basicFont;
     overflow: hidden;
+}
+
+.pop-up {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    place-content: center;
+    width: 200px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    opacity: 0;
+    border-radius: 10px;
+    animation: revealPopUp 0.5s forwards;
+}
+
+@keyframes revealPopUp {
+    to {
+        opacity: 1;
+        top: 150px;
+    }
 }
 
 .wrapper {
@@ -27,28 +51,33 @@ body {
     right: 20px;
     bottom: 50px;
     left: 20px;
-    @include flex-center();
-    background-color: rgba(255, 255, 255, 0.1);
+    height: calc(100% - 130px);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    row-gap: 10px;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
-    padding: 60px 10px 10px;
+    padding: 10px 10px;
+    overflow-y: scroll;
     @media (max-width: $tablet) {
+        height: calc(100% - 100px);
+        padding: 10px 10px;
         top: 50px;
         right: 10px;
         bottom: 50px;
         left: 10px;
-        padding: 0 10px 0;
     }
 }
 
 .weather-container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 40px - 10px);
     display: flex;
     column-gap: 10px;
-    overflow-y: scroll;
     @media (max-width: $tablet) {
         flex-direction: column;
-        padding: 60px 0 10px;
         row-gap: 10px;
     }
 }
@@ -89,5 +118,6 @@ body {
     @media (max-width: $tablet) {
         width: 100%;
         min-height: min-content;
+        padding-bottom: 10px;
     }
 }
