--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,9 +4,18 @@
     bottom: 0;
     left: 25px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: column;
     height: 50px;
+    div {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        p {
+            font-size: clamp(12px, 2vw, 16px);
+        }
+    }
     @media (max-width: $tablet) {
         height: 50px;
         right: 10px;
@@ -14,16 +23,8 @@
     }
 }
 
-.copyright {
-    font-size: clamp(12px, 2vw, 16px);
-}
-
 .creator {
     font-size: clamp(12px, 2vw, 16px);
-    img {
-        width: clamp(20px, 3vw, 25px);
-        vertical-align: sub;
-    }
 }
 
 .creator a {
@@ -38,7 +39,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: white;
+    background: white;
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.3s ease-out;
