--- a/scss/_weather-hourly.scss
+++ b/scss/_weather-hourly.scss
@@ -3,28 +3,29 @@
 .weather-hourly-container {
     width: 100%;
     height: 20%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 25px;
+    // display: flex;
+    // justify-content: space-evenly;
+    // align-items: center;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
     overflow-x: scroll;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
-    @media (max-width: 1000px) {
-        justify-content: flex-start;
-    }
+
     @media (max-width: $tablet) {
+        // justify-content: flex-start;
         height: 100px;
         flex-shrink: 0;
     }
+
     div {
+        margin: 0 15px;
         height: 100%;
         display: flex;
-        flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        // flex-shrink: 0;
+        flex-direction: column;
+        flex-shrink: 0;
     }
 }
